# Release Notes

## 3.0.0

- Drops support for Python 2.7 and 3.5
- Fixes a bug where `include` could make the generated string too long.
- Add new `rstr.unambiguous()` method that omits homographs.

