@@ -1,5 +1,9 @@
 # Release Notes
 
+## Unreleased
+
+- Fix a bug where setting end_range but not start_range would fail.
+
 ## 3.0.0
 
 - Drops support for Python 2.7 and 3.5
